# AuthServer_Example

./: Dockerfile  Dockerfile.txt  Dockerfile_.txt  Dockerfile_db.txt  Dockerfile_old.txt  Dockerfile_poetry.txt  Dockerfile_txt  alembic.ini  api_server.py  ddl.txt  docker-compose.yml  docker-entrypoint.sh  git_action.txt  main.py  pyproject.toml  requirements.txt  run.sh
api/: api_server.py  example.py  main.py
api/auth/: security.py  token.py
api/router/: item.py  items.py  user.py  users.py
api/router/scripts/: token.py  word_frag.py
api/scripts/: exception.py  param_valid.py  word_frag.py
api/users/: login.py
crud/: item.py  user.py
data/db/crud/: item.py  user.py
data/db/models/: item.py  user.py
data/db/schemas/: users.py
data/models/: item.py  user.py
data/schemas/: item.py  items.py  token.py  user.py
db/: models.py  orm_connector.py
migrations/: env.py
migrations/versions/: a35d8d6e26e3_backend.py
models/: item.py  user.py
public/: config.json
router/: item.py  user.py
router/scripts/: __init__.py  word_frag.py
schemas/: item.py  response.py  user.py
